--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -3,6 +3,6 @@
 ## and any other configuration values it needs.
 
 ## MongoDB example settings
-module=uk.ac.imperial.presage2.db.mongodb.MongoModule
-mongo.host=127.0.0.1
+#module=uk.ac.imperial.presage2.db.mongodb.MongoModule
+#mongo.host=127.0.0.1
   
