--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,8 +1,7 @@
-#### db.properties ####
-## This file tells Presage2 which database connector to use
-## and any other configuration values it needs.
+  module=uk.ac.imperial.presage2.db.sql.SqlModule
+  driver=com.mysql.jdbc.Driver
+  url=jdbc:mysql://localhost:3306/test
+  user=root
+  password= evpool
+  implementation=uk.ac.imperial.evpool.db.EVPoolStorage
 
-## MongoDB example settings
-#module=uk.ac.imperial.presage2.db.mongodb.MongoModule
-#mongo.host=127.0.0.1
-  
