--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -27,4 +27,8 @@ log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
 
-log4j.logger.uk.ac.imperial.presage2=INFO
+log4j.logger.uk.ac.imperial.presage2=WARN
+log4j.logger.uk.ac.imperial.evpool.RuleEngine=WARN
+log4j.logger.uk.ac.imperial.evpool.actions.EVPoolActionHandler=INFO
+log4j.logger.uk.ac.imperial.evpool.EVPoolService=INFO
+log4j.logger.uk.ac.imperial.evpool.EVPoolPlayer=WARN
