--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -32,3 +32,4 @@ log4j.logger.uk.ac.imperial.evpool.RuleEngine=INFO
 log4j.logger.uk.ac.imperial.evpool.actions.EVPoolActionHandler=INFO
 log4j.logger.uk.ac.imperial.evpool.EVPoolService=INFO
 log4j.logger.uk.ac.imperial.evpool.EVPoolPlayer=WARN
+log4j.logger.uk.ac.imperial.presage2.db.sql.SqlStorage=WARN
