--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
             <version>${presage.version}</version>
         </dependency>
         <dependency>
+            <groupId>colt</groupId>
+            <artifactId>colt</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+        <dependency>
             <groupId>uk.ac.imperial.presage2</groupId>
             <artifactId>presage2-sqldb</artifactId>
             <version>${presage.version}</version>
