--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -3,5 +3,5 @@
   url=jdbc:mysql://localhost:3306/test
   user=root
   password= evpool
-  implementation=uk.ac.imperial.evpool.db.EVPoolStorage
+  implementation=uk.ac.imperial.evpool.io.EvStorage
 
